samples/_failures_safe/1761655997_8f28ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04d3b6a3.c: In function ‘main’:
./samples/SAFE/__tmp_04d3b6a3.c:157:19: error: expected ‘;’ at end of input
  157 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_04d3b6a3.c:157:13: error: expected declaration or statement at end of input
  157 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_04d3b6a3.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04d3b6a3.c:157:13: error: expected declaration or statement at end of input
